GNOME Bugzilla – Bug 687104
Searching all doesn't finalizes
Last modified: 2012-11-04 12:22:12 UTC
Open the Test UI, select Tracker in the "Search" combo, and click search without entering any value. The behaviour is Grilo will search all the media; but seems the operation doesn't finalize, and check_options() failed is reported in the log. Same applies to other plugins.
Created attachment 227782 [details] [review] test-ui: Use the right options in search/query operations It fixes a small bug that meant operations not really finishing.
commit 1cdab86dbc6fccfc783ca44213d645b67c00fb43 Author: Juan A. Suarez Romero <jasuarez@igalia.com> Date: Thu Nov 1 09:22:46 2012 +0100 test-ui: Use the right options in search/query operations It fixes a small bug that meant operations not really finishing. https://bugzilla.gnome.org/show_bug.cgi?id=687104 tools/grilo-test-ui/main.c | 4 ++-- 1 file changed, 2 insertions(+), 2 deletions(-) Attachment 227782 [details] pushed as 1cdab86 - test-ui: Use the right options in search/query operations