test-ui: Use the right options in search/query operations

It fixes a small bug that meant operations not really finishing.

https://bugzilla.gnome.org/show_bug.cgi?id=687104